# lola-rapoport-projects

./: .gitignore  README.md  requirements.txt
projects/academic-reports/: README.md
projects/arkanoid-java/: .gitignore  README.md  build.gradle  settings.gradle
projects/cloud-policy-guard/: .gitignore  Dockerfile  LOCALSTACK.md  README.md  docker-compose.yml  localstack-cheatsheet.sh  localstack-start.sh  localstack-stop.sh  pom.xml
projects/cloud-policy-guard/examples/: all-violations.yaml  database-exposed.yaml  edge-cases.yaml  ipv6-only.yaml  minimal-secure.yaml  missing-tags.yaml  mixed-compliance.yaml  multi-environment.yaml  production-best-practices.yaml  rest-scan.json  secure-security-groups.yaml  security-groups.yaml  ssh-exposed.yaml  terraform-plan.json
projects/convex-optimization-simplex-solver/: README.md  simplex_solver.py
projects/lithography-defect-detection/: README.md  training.ipynb
projects/lithography-defect-detection/experiments/: baseline_vs_finetune.ipynb  lithography_simulation.ipynb  test_model.ipynb  (+3 more)
projects/online-ride-dispatch-optimizer/: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  report.tex
projects/online-ride-dispatch-optimizer/docs/results/: summary.csv  summary_table.tex
projects/online-ride-dispatch-optimizer/examples/: run_experiment.py
projects/online-ride-dispatch-optimizer/src/ride_dispatch_optimizer/: __init__.py  algorithms.py  arrivals.py  cli.py  demand.py  entities.py  experiments.py  graph.py  simulator.py
projects/online-ride-dispatch-optimizer/tests/: test_algorithms.py  test_simulator.py
(+81 files in other folders)
